# AWS-hackathon-cmoney

./: .gitignore  CHANGELOG.md  README.md
.specify/: feature.json
.specify/integrations/: speckit.manifest.json
V1/: CLAUDE.md  README.md  VERSION_NOTE.md
V1/docs/: 00_PROJECT_CHARTER.md  (+5 more)
V2/: .dockerignore  .env.example  CLAUDE.md  DEVELOPMENT.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  python-requirements.txt
V2/apps/ai-training/: README.md  pyproject.toml
V2/apps/ai-training/src/mindfolio_training/: __init__.py  artifact.py  features.py  main.py  pipeline.py
V2/apps/ai-training/tests/: test_artifact.py  test_features.py
V2/apps/api/: Dockerfile  README.md  pyproject.toml
V2/apps/api/src/mindfolio_api/: __init__.py  auth.py  config.py  main.py
V2/apps/api/src/mindfolio_api/ai/: __init__.py  deep_dive.py  fallback.py  narrative.py  prompts.py
V2/apps/api/src/mindfolio_api/repositories/: __init__.py  holdings.py  market_context.py  market_data.py  retention.py
V2/apps/api/src/mindfolio_api/routers/: __init__.py  health.py  holdings.py  reconstructions.py  retention.py  stocks.py
V2/apps/api/src/mindfolio_api/schemas/: ai_report.py  reconstruction.py  retention.py
V2/apps/api/src/mindfolio_api/services/: reconstruction.py  retention.py
V2/apps/api/tests/: test_deep_dive.py  test_health.py  test_holdings_endpoints.py  test_market_context.py  test_market_repo.py  test_narrative.py  test_reconstruction_endpoints.py  test_retention_endpoints.py  test_startup.py  test_stocks_endpoints.py
apps/ai-training/: README.md  pyproject.toml
apps/ai-training/contracts/: moment-score.schema.json
apps/ai-training/src/mindfolio_training/: build_features.py  score_moments.py
data/: README.md
docs/: 00_PROJECT_CHARTER.md  01_TEAM_AND_SUBMISSION.md  02_PROPOSAL_OUTLINE.md  03_PRODUCT_AND_UX.md  04_DATA_AND_AI.md  05_TECHNICAL_ARCHITECTURE.md  06_THREE_DAY_EXECUTION_PLAN.md  07_METRICS_AND_EXPERIMENTS.md  08_PITCH_DECK_OUTLINE.md  09_SUBMISSION_CHECKLIST.md  10_DEMO_RUNBOOK.md  11_COMPLETE_MVP_SPEC.md  README.md
infra/: README.md
(+112 files in other folders)
