[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mindfolio-api"
version = "0.1.0"
description = "FastAPI backend for Mindfolio Time Machine V2"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.43,<2",
  "fastapi>=0.115,<1",
  "mindfolio-core>=0.1.0",
  "psycopg[binary]>=3.2,<4",
  "psycopg-pool>=3.2,<4",
  "pydantic-settings>=2.6,<3",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1",
  "pytest>=8.3,<9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
